--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="icon" type="image/x-png" href="images/logo-WJ5otYon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1">
   <script src="js/d5effce557.js" crossorigin="anonymous"></script>
-  <title>Terminal</title>
+  <title>Lax's Terminal</title>
   <script type="module" crossorigin="" src="js/index-DVn9EIgq.js"></script>
   <link rel="stylesheet" crossorigin="" href="css/index-N2tkTU4j.css">
 </head>
@@ -11,7 +11,7 @@
 <body>
   <main id="main">
     <div id="bars">
-      <div id="bar-1">Terminal</div>
+      <div id="bar-1">Lax's Terminal</div>
       <div id="bar-2"></div>
       <div id="bar-3"></div>
       <div id="bar-4"></div>
